# binary-fuzz-engine

./: CMakeLists.txt  README.md
include/: fuzzer.h  protocol.h  timeout_executor.h
src/: fuzzer.cpp  main.cpp  protocol.cpp  timeout_executor.cpp
tests/: test_fuzzer.cpp
